[package]
name = "metrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
ntex = { version = "0.6.3", features = ["tokio"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sysinfo = "0.27.7"
tokio = "1.25.0"
