[workspace]
members = [
  "crates/metrs_stubs",
  "crates/metrsd_client",
  "bin/metrsd",
  "bin/metrs",
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[patch.crates-io]
metrs_stubs = { path = "crates/metrs_stubs" }
metrsd_client = { path = "crates/metrsd_client" }
