[package]
name = "metrs_stubs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
sysinfo = ["dep:sysinfo"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"], optional = true }
sysinfo = { version = "0.28.0", optional = true }
