# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "metrs_stubs"
version = "0.3.0"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "Metrs shared data type"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/nxthat/metrs"

[lib]
bench = false

[features]
default = []
sysinfo = ["dep:sysinfo"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.188", features = ["derive"], optional = true }
sysinfo = { version = "0.29.7", optional = true }
