# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "metrs_stubs"
version = "0.5.5"
edition = "2021"
authors = ["nanocl contributors <team@anonkey.com>"]
description = "Metrs shared data type"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/anonkey/metrs"

[lib]
bench = false

[features]
default = []
sysinfo = ["dep:sysinfo"]
serde = ["dep:serde"]
bytes = ["dep:ntex-bytes", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
sysinfo = { version = "0.32", optional = true }
ntex-bytes = { version = "0.1", optional = true }
serde_json = { version = "1", optional = true }
