[package]
name = "metrsd_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio"]
tokio = ["ntex/tokio"]
glommio = ["ntex/glommio"]
async-std = ["ntex/async-std"]

[dependencies]
futures = "0.3.26"
ntex = { version = "0.6.3", features = ["rustls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
metrs_stubs = { version = "0.1.0", features = ["serde"]}
