[package]
name = "metrsd_client"
version = "0.1.1"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "The Metrs daemon api client"
readme = "readme.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nxthat/metrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[features]
default = ["tokio"]
tokio = ["ntex/tokio"]
glommio = ["ntex/glommio"]
async-std = ["ntex/async-std"]

[dependencies]
futures = "0.3.26"
ntex = { version = "0.6.3", features = ["rustls"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
metrs_stubs = { version = "0.1.0", features = ["serde"]}
